--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                        <div class="col-xl-12">
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left d-flex">
+                                    <img src="/assets/img/logo-wpp-png.png" alt="">
                                     <ul class="contact-now">     
                                         <li>(11) 97706-4161</li>
                                     </ul>
